--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <%- include ("./partials/head.ejs") %>
 </head>
 <body>
     <nav></nav>
@@ -12,6 +9,16 @@
     <section id='store-container'>
         <span>Welcome to</span>
         <h1>THE STORE</h1>
+        <ul id='product-list'>
+            <% products.forEach( (p, i) => { %>
+                <section class="card">
+                    <a href="/product/<%=i %>">
+                    <img alt="<%=p.name %>" src="<%=p.img %>" height="100px">
+                    <p><%=p.name %></p>
+                    </a>
+                </section>
+            <% }) %>
+        </ul>
     </section>
 </body>
 </html>
