--- a/views/show.ejs
+++ b/views/show.ejs
@@ -14,16 +14,22 @@
         <img alt="<%=product.name %>" src="<%=product.img %>" height="100px">
         <p><%=product.description %></p>
         <p>$<%=product.price %></p>
-        <p>
-            <% if (product.qty > 0) { %>
-                <p>In Stock: <%=product.qty %></p>
-                <form action="/<%=index %>/buy?_method=PUT" method="POST">
-                    <input type="submit" value="Buy!">
-                </form>
-            <%} else { %>
-                <p> Out of Stock! </p>
-             <% }%>
-        </p>
+
+        <% if (product.qty > 0) { %>
+            <p>In Stock: <%=product.qty %></p>
+            <form action="/<%=index %>/buy?_method=PUT" method="POST">
+                <input type="submit" value="Buy!">
+            </form>
+        <%} else { %>
+            <p> Out of Stock! </p>
+            <% }%>
+
+        <form action="/<%=index %>/edit">
+            <button type="submit">Edit</button>
+        </form>
+        <form action="/<%=index %>/?_method=DELETE" method=POST>
+            <button type="submit">Delete</button>
+        </form>
     </section>
 </body>
 </html>
