--- a/views/show.ejs
+++ b/views/show.ejs
@@ -17,17 +17,17 @@
 
         <% if (product.qty > 0) { %>
             <p>In Stock: <%=product.qty %></p>
-            <form action="/<%=index %>/buy?_method=PUT" method="POST">
+            <form action="/<%=product.id %>/buy?_method=PUT" method="POST">
                 <input type="submit" value="Buy!">
             </form>
         <%} else { %>
             <p> Out of Stock! </p>
             <% }%>
 
-        <form action="/<%=index %>/edit">
+        <form action="/<%=product.id %>/edit">
             <button type="submit">Edit</button>
         </form>
-        <form action="/<%=index %>/?_method=DELETE" method=POST>
+        <form action="/<%=product.id %>/?_method=DELETE" method=POST>
             <button type="submit">Delete</button>
         </form>
     </section>
