--- a/public/style.css
+++ b/public/style.css
@@ -1,15 +1,35 @@
+body {
+    background-color: palegoldenrod;
+}
+
+header {
+    margin: 0 auto;
+
+    display: flex;
+    justify-content: center;
+}
+
 form {
     display: inline;
 }
 
 img {
-    width: 90%;
+    max-width: 100%;
 }
 
 button {
-    width: 40%;
+    width: 75px;
     
     padding: 0;
+
+    background-color:bisque;
+    color: gray;
+    border-color: gray;
+    border-radius: 3px;
+}
+
+button:hover {
+    border-radius: 10px;
 }
 
 #product-list {
@@ -23,7 +43,10 @@ button {
 }
 
 .button-group {
-    width: 90%
+    display: flex;
+    justify-content: space-around;
+
+    width: 95%
 }
 
 .card {
@@ -38,6 +61,10 @@ button {
 
     padding: 5px;
     margin: 5px;
-    border: 1px solid black;
+    border: 2px solid rgb(170, 169, 169);
+    border-radius: 10px;
+
+    background-color:rgb(247, 198, 126)
+
 }
 
