set basic file structure from copied project - file paths changed or commented out - home, index, new, show available with skeleton css styling

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,8 +1,8 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mongoose Store</title>
+<title>Captain's Log</title>
 
-<!-- <link rel="stylesheet" href="normalize.css" /> -->
-<!-- <link rel="stylesheet" href="skeleton.css" /> -->
-<link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="normalize.css" /> <!-- This is from the skeleton file NOT CURRENT NORMALIZE -->
+<link rel="stylesheet" href="skeleton.css" />
+<!-- <link rel="stylesheet" href="style.css" /> -->
