--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,15 @@
 body {
-    background-color: palegoldenrod;
+    background: url('/assets/teal-triangle-vwave.png');
+    background: cover;
+    /* background-color: palegoldenrod; */
+}
+
+a {
+    text-decoration: none;
+}
+
+nav a {
+    padding: 0 5px 0 0;
 }
 
 header {
