--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,26 +9,24 @@
             <%- include ("./partials/nav.ejs") %>
         </nav>
         <br>
-        <p>Welcome to</p>
-        <h1>THE STORE</h1>
-        <p>user</p>
+        <h1>CAPTAIN'S LOG</h1>
     </header>
-    <section id='store-container'>
-        <ul id='product-list'>
-            <% products.forEach( (p, i) => { %>
-                <section class="card">
-                    <a href="/<%=p.id %>">
-                    <img alt="<%=p.name %>" src="<%=p.img %>" height="100px">
-                    <p><%=p.name %></p>
+    <section id='log-book'>
+        <ul id='log-list'>
+            <% logs.forEach( (log, i) => { %>
+                <section class="log-card">
+                    <a href="/<%=log.id %>">
+                    <p><%=log.title %></p>
                     </a>
-                    <div class='button-group'>
-                        <form action="/<%=p.id %>/edit">
+                    <p>TIMESTAMP</p>
+                    <!-- <div class='button-group'>
+                        <form action="/<%=//p.id %>/edit">
                             <button type="submit">Edit</button>
                         </form>
-                        <form action="/<%=p.id %>/?_method=DELETE" method=POST>
+                        <form action="/<%=//p.id %>/?_method=DELETE" method=POST>
                             <button type="submit">Delete</button>
                         </form>
-                    </div>
+                    </div> -->
                 </section>
             <% }) %>
         </ul>
