--- a/views/new.ejs
+++ b/views/new.ejs
@@ -10,12 +10,14 @@
     <header></header>
     <section id='new-container'>
         <form action="/" method="POST">
-            Name: <input type="text" name="name" value="NO DATA" onclick="this.select()">
-            Descripriton: <input type="text" name="description" value="NO DATA" onclick="this.select()">
-            Image: <input type="text" name="img" value="NO DATA" onclick="this.select()">
-            Price: <input type="number" name="price" value="NO DATA" onclick="this.select()">
-            Quantity: <input type="text" name="qty" value="NO DATA" onclick="this.select()">
-            <input type="submit" value="New Product">
+            <label for="title">Name</label>
+            <input type="text" name="title" value="New Log Entry" onclick="this.select()">
+            <label for="entry">Entry</label>
+            <input type="text" name="entry" value="NO DATA ENTERED" onclick="this.select()">
+            <label for="isShipBroken">Is the ship currently broken?
+                <input type="checkbox" name="isShipBroken" checked><br>
+            </label>
+            <input type="submit" value="Log it!">
         </form>
     </section>
 </body>
