--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,3 +1,4 @@
-<a href="/">Home</a>
-<a href="/new">Add Product</a>
-<a href="/user">User Cart</a>
+<a href="/">Front Cover</a>
+<a href="/logs">Log Listing</a>
+<a href="/new">Add New Log</a>
+<!-- <a href="/user">User Cart</a> -->
