--- a/public/style.css
+++ b/public/style.css
@@ -1,80 +1,3 @@
-body {
-    background: url('/assets/teal-triangle-vwave.png');
-    background: cover;
-    /* background-color: palegoldenrod; */
-}
-
-a {
-    text-decoration: none;
-}
-
-nav a {
-    padding: 0 5px 0 0;
-}
-
-header {
-    margin: 0 auto;
-
-    display: flex;
-    justify-content: center;
-}
-
-form {
+.log-card {
     display: inline;
 }
-
-img {
-    max-width: 100%;
-}
-
-button {
-    width: 75px;
-    
-    padding: 0;
-
-    background-color:bisque;
-    color: gray;
-    border-color: gray;
-    border-radius: 3px;
-}
-
-button:hover {
-    border-radius: 10px;
-}
-
-#product-list {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-#store-container {
-    width: 80%;
-    margin: 0 auto;
-}
-
-.button-group {
-    display: flex;
-    justify-content: space-around;
-
-    width: 95%
-}
-
-.card {
-    display:grid;
-    /* grid-template-columns: 1fr; */
-    grid-template-rows: 80%, auto;
-    /* grid-column-gap: 5px; */
-    /* grid-row-gap: 5px; */
-    justify-items: center;
-
-    width: 30%;
-
-    padding: 5px;
-    margin: 5px;
-    border: 2px solid rgb(170, 169, 169);
-    border-radius: 10px;
-
-    background-color:rgb(247, 198, 126)
-
-}
-
