--- a/views/new.ejs
+++ b/views/new.ejs
@@ -10,13 +10,17 @@
     <header></header>
     <section id='new-container'>
         <form action="/" method="POST">
-            <label for="title">Name</label>
+
+            <label for="title">Title</label>
             <input type="text" name="title" value="New Log Entry" onclick="this.select()">
+
             <label for="entry">Entry</label>
             <input type="text" name="entry" value="NO DATA ENTERED" onclick="this.select()">
-            <label for="isShipBroken">Is the ship currently broken?
-                <input type="checkbox" name="isShipBroken" checked><br>
+
+            <label for="shipIsBroken">Ship is currently broken?
+                <input type="checkbox" name="shipIsBroken" checked><br>
             </label>
+
             <input type="submit" value="Log it!">
         </form>
     </section>
