--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,6 +3,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Captain's Log</title>
 
-<link rel="stylesheet" href="normalize.css" /> <!-- This is from the skeleton file NOT CURRENT NORMALIZE -->
-<link rel="stylesheet" href="skeleton.css" />
+<link rel="stylesheet" href="/normalize.css" /> 
+<!-- The ABOVE is from the skeleton file NOT CURRENT NORMALIZE -->
+
+<link rel="stylesheet" href="/skeleton.css" />
 <!-- <link rel="stylesheet" href="style.css" /> -->
