--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -8,8 +8,8 @@
         <%- include ("./partials/nav.ejs") %>
     </nav>
     <header></header>
-    <section id='edit-container'>
-        <form action="/<%=log.id %>/?_method=PUT" method="POST">
+    <section id='log-edit'>
+        <form action="/logs/<%=log.id %>/?_method=PUT" method="POST">
 
             <label for="title">Title</label>
             <input type="text" name="title" value="<%=log.title %>" onclick="this.select()">
